# firewallfabrik

./: .gitignore  .gitmodules  .license-header.txt  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT  MANIFEST.in  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  requirements.in  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: codeql.yml  docs.yml  pre-commit-autoupdate.yml  release.yml  scorecard.yml
assets/: ch.linuxfabrik.firewallfabrik.desktop  ch.linuxfabrik.firewallfabrik.xml
data/: ch.linuxfabrik.firewallfabrik.desktop
docs/: 01 - Introduction.rst  02 - Installing Firewall Builder.rst  03 - Definitions and Terms.rst  04 - Firewall Builder GUI.rst  05 - Working with Objects.rst  06 - Network Discovery.rst  07 - Firewall Policies.rst  09 - Configuration of Interfaces.rst  11 - Manage your Firewall Remotely.rst  13 - Configlets.rst  15 - Troubleshooting.rst  16 - Appendix.rst  conf.py  index.md  index.rst
docs/developer-guide/: CompilationPipeline.md  DatabaseManager.md  Debugging.md  DesignDecisions.md  PlatformDefaults.md  README.md  RuleProcessors.md  Testing.md  index.md
docs/user-guide/: 01 - Introduction.md  01 - Introduction.rst  02 - Installing Firewall Builder.rst  02 - Installing FirewallFabrik.md  02 - Installing FirewallFabrik.rst  03 - Definitions and Terms.md  03 - Definitions and Terms.rst  04 - Firewall Builder GUI.rst  04 - FirewallFabrik GUI.md  04 - FirewallFabrik GUI.rst  05 - Working with Objects.md  05 - Working with Objects.rst  06 - Network Discovery.md  06 - Network Discovery.rst  07 - Firewall Policies.md  07 - Firewall Policies.rst  08 - Cluster Configuration.md  08 - Cluster Configuration.rst  09 - Configuration of Interfaces.md  09 - Configuration of Interfaces.rst  10 - Compiling and Installing a Policy.md  10 - Compiling and Installing a Policy.rst  11 - Manage your Firewall Remotely.md  11 - Manage your Firewall Remotely.rst  12 - Integration with OS Running on the Firewall Machine.md  12 - Integration with OS Running on the Firewall Machine.rst  13 - Configlets.md  13 - Configlets.rst  14 - Firewall Builder Cookbook.rst  14 - FirewallFabrik Cookbook.md  14 - FirewallFabrik Cookbook.rst  15 - Troubleshooting.md  15 - Troubleshooting.rst  16 - Appendix.md  16 - Appendix.rst  17 - Migrating from Firewall Builder.md  17 - Migrating from Firewall Builder.rst  README.md  SCREENSHOTS-CHECKLIST.md  index.rst
examples/: README.md  vdc.fwf
resources/: README.md
src/firewallfabrik/: __init__.py  main.py
src/firewallfabrik/cli/: README.md  __init__.py  fwf_ipt.py  fwf_nft.py
src/firewallfabrik/compiler/: README.md  __init__.py  _base.py  _comp_rule.py  _compiler.py  _interval_helpers.py  _nat_compiler.py  _os_configurator.py  _policy_compiler.py  _preprocessor.py  _routing_compiler.py  _rule_processor.py
src/firewallfabrik/compiler/processors/: README.md  _generic.py  _policy.py  _service.py
src/firewallfabrik/core/: README.md  __init__.py  _database.py  _util.py  _xml_reader.py  _yaml_reader.py  _yaml_writer.py
src/firewallfabrik/core/objects/: __init__.py  _addresses.py  _base.py  _database.py  _devices.py  _groups.py  _rules.py  _services.py
src/firewallfabrik/core/options/: __init__.py  _keys.py  _metadata.py  _migration.py  (+1 more)
src/firewallfabrik/driver/: README.md  __init__.py  _compiler_driver.py  _configlet.py  _interface_properties.py  _jinja2_template.py
src/firewallfabrik/gui/: README.md  __init__.py  about_dialog.py  actions_dialog.py  address_dialogs.py  address_table_dialog.py  app.py  base_object_dialog.py  clipboard_router.py  clipboard_store.py  cluster_group_dialog.py  cluster_member_dialog.py  comment_editor_panel.py  comment_tags.py  compile_dialog.py  confirm_delete_dialog.py  custom_service_dialog.py  debug_dialog.py  device_dialogs.py  dns_name_dialog.py  drop_area.py  dynamic_group_dialog.py  editor_manager.py  file_properties_dialog.py  find_panel.py  find_where_used_panel.py  firewall_installer.py  group_dialog.py  iface_opts_dialog.py  import_addresses.py  inspect_dialog.py  install_options_dialog.py  interface_autoconfigure.py  iptables_settings_dialog.py  label_settings.py  library_dialog.py  library_export.py  linux_settings_dialog.py  main_window.py  metric_editor_panel.py  (+30 more)
src/firewallfabrik/importers/: README.md
src/firewallfabrik/libfwfabrik/: __init__.py  _database.py  _xml_reader.py
src/firewallfabrik/libgui/: FirewallCodeViewer.ui  InterfaceEditorWidget.ui  TutorialDialog.ui  WorkflowIcons.ui  aboutdialog_q.ui  actionsdialog_q.ui  addressrangedialog_q.ui  addresstabledialog_q.ui  asklibforcopydialog_q.ui  attachednetworksdialog_q.ui  bsdifaceoptsdialog_q.ui  clusterdialog_q.ui  clustergroupdialog_q.ui  clustermembersdialog_q.ui  colorlabelmenuitem_q.ui  compileroutputpanel_q.ui  confirmdeleteobjectdialog_q.ui  conntrackoptionsdialog_q.ui  convert_ui_qt6.sh  createobjectspage_q.ui  customservicedialog_q.ui  dnsnamedialog_q.ui  dynamicgroupdialog_q.ui  findobjectwidget_q.ui  firewalldialog_q.ui  freebsdadvanceddialog_q.ui  fwobjectdroparea_q.ui  groupobjectdialog_q.ui  ic_filenamepage_q.ui  ic_firewallnamepage_q.ui  ic_networkzonespage_q.ui  icmpservicedialog_q.ui  instoptionsdialog_q.ui  interfacedialog_q.ui  iosacladvanceddialog_q.ui  iosadvanceddialog_q.ui  ipcoposadvanceddialog_q.ui  ipservicedialog_q.ui  iptadvanceddialog_q.ui  ipv4dialog_q.ui  (+39 more)
tests/: README.md  conftest.py  normalize.py  test_addr_contains.py  test_check_interface_addresses.py  test_compiler_ipt.py  test_compiler_nft.py  test_compiler_private.py  test_custom_service_output.py  test_dynamic_group_match_mode.py  test_interface_autoconfigure.py  test_kernel_hardening_ipv6.py  test_load_save.py  test_nft_named_tables.py  test_range_to_cidr.py  test_service_is_any.py  test_store_action_processor.py  test_verify_custom_services.py  update_expected_output.py  update_golden.py
tests/fixtures/: basic_accept_deny.fwf  cluster-tests.fwb  compiler-tests.fwf  objects-for-regression-tests.fwb  optimizer-test.fwb  reject_actions.fwf
tools/: gen-yaml-mapping.py
(+589 files in other folders)
