[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "Linuxfabrik GmbH, Zurich, Switzerland", email = "info@linuxfabrik.ch" },
]
description = "FirewallFabrik is a Qt-based GUI tool for managing firewall configurations across multiple platforms (iptables, nftables, etc.)"
dynamic = [
    "dependencies",
    "version",
]
license-files = ["LICENSE", "COPYRIGHT"]
name = "firewallfabrik"
readme = "README.md"
requires-python = ">=3.14"

[project.scripts]
fwf = "firewallfabrik.gui.app:main"
fwf-ipt = "firewallfabrik.cli.fwf_ipt:main"
# to be implemented
# fwf-edit = "firewallfabrik.cli.fwfedit:main"
# fwf-iosacl = "firewallfabrik.cli.fwf_iosacl:main"
# fwf-junosacl = "firewallfabrik.cli.fwf_junosacl:main"
# fwf-nft = "firewallfabrik.cli.fwf_nft:main"
# fwf-nxosacl = "firewallfabrik.cli.fwf_nxosacl:main"
# fwf-pf = "firewallfabrik.cli.fwf_pf:main"
# fwf-pix = "firewallfabrik.cli.fwf_pix:main"

[project.urls]
Download = "https://github.com/linuxfabrik/firewallfabrik/releases/"
Homepage = "https://github.com/linuxfabrik/firewallfabrik/"
Source = "https://github.com/linuxfabrik/firewallfabrik/"
Tracker = "https://github.com/linuxfabrik/firewallfabrik/issues/"

[tool.setuptools.dynamic]
dependencies = { file = "requirements.in" }
version = { attr = "firewallfabrik.__version__" }

[tool.setuptools.packages.find]
where = ["src"]


# === ruff ===
[tool.ruff]
target-version = "py313" # py314 does not exist yet as of 2026-02-09

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (logic errors)
    "I",    # isort (import sorting)
    "B",    # flake8-bugbear (potential bugs)
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade (modernize syntax)
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "PTH",  # flake8-use-pathlib
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",  # line too long
]

[tool.ruff.lint.isort]
known-first-party = ["firewallfabrik"]

[tool.ruff.lint.per-file-ignores]
# SQLAlchemy models use forward-reference strings resolved at runtime (F821)
# and require mutable class attributes like __mapper_args__ without ClassVar (RUF012)
"src/firewallfabrik/core/objects/*.py" = ["F821", "RUF012"]

[tool.ruff.format]
quote-style = "single"
