[build-system]
requires = ["setuptools >= 77.0.3", "PySide6>=6.8"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "Linuxfabrik GmbH, Zurich, Switzerland", email = "info@linuxfabrik.ch" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: System :: Networking :: Firewalls",
]
description = "Modern fwbuilder successor: Qt GUI for managing iptables/nftables policies. Centralized policy DB with reusable objects, scales to hundreds of firewalls, generates deployment-ready shell scripts."
dependencies = [
    "defusedxml~=0.7.1",
    "jinja2~=3.1",
    "pyyaml~=6.0.3",
    "sqlalchemy~=2.0.46",
]
dynamic = [
    "version",
]
keywords = [
    "firewall",
    "iptables",
    "nftables",
    "security",
]
license-files = ["LICENSE", "COPYRIGHT"]
name = "firewallfabrik"
readme = "README.md"
requires-python = ">=3.14"

[project.optional-dependencies]
gui = ["PySide6~=6.8"]

[dependency-groups]
dev = [
    "pytest~=9.0.2",
]

[project.scripts]
fwf-ipt = "firewallfabrik.cli.fwf_ipt:main"
fwf-nft = "firewallfabrik.cli.fwf_nft:main"
# to be implemented
# fwf-edit = "firewallfabrik.cli.fwfedit:main"
# fwf-iosacl = "firewallfabrik.cli.fwf_iosacl:main"
# fwf-junosacl = "firewallfabrik.cli.fwf_junosacl:main"
# fwf-nxosacl = "firewallfabrik.cli.fwf_nxosacl:main"
# fwf-pf = "firewallfabrik.cli.fwf_pf:main"
# fwf-pix = "firewallfabrik.cli.fwf_pix:main"

# This section is only needed for Windows so that the app does not open an additional console
# window. On all other platforms this behaves the same as [project.scripts].
[project.gui-scripts]
fwf = "firewallfabrik.gui.app:main"

[project.urls]
Download = "https://github.com/linuxfabrik/firewallfabrik/releases/"
Homepage = "https://github.com/linuxfabrik/firewallfabrik/"
Source = "https://github.com/linuxfabrik/firewallfabrik/"
Tracker = "https://github.com/linuxfabrik/firewallfabrik/issues/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "firewallfabrik.__version__" }

[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
testpaths = ["tests"]


# === linters ===
[tool.pyright]
exclude = ["src/firewallfabrik/gui", "venv"]

[tool.ruff]
target-version = "py313" # py314 does not exist yet as of 2026-02-09

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (logic errors)
    "I",    # isort (import sorting)
    "B",    # flake8-bugbear (potential bugs)
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade (modernize syntax)
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "PTH",  # flake8-use-pathlib
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",  # line too long
]

[tool.ruff.lint.isort]
known-first-party = ["firewallfabrik"]

[tool.ruff.lint.per-file-ignores]
# SQLAlchemy models use forward-reference strings resolved at runtime (F821)
# and require mutable class attributes like __mapper_args__ without ClassVar (RUF012)
"src/firewallfabrik/core/objects/*.py" = ["F821", "RUF012"]

[tool.ruff.format]
quote-style = "single"

[tool.bandit]
# B110 (try/except/pass) and B112 (try/except/continue): intentional patterns
# for graceful degradation in a GUI/CLI tool.
# B311 (pseudo-random): not used for cryptographic purposes.
skips = ["B110", "B112", "B311"]

[tool.bandit.assert_used]
# pytest-style asserts are idiomatic in tests/, but bandit still scans the
# directory for other real issues.
skips = ["*/tests/*.py", "tests/*.py"]

[tool.vulture]
min_confidence = 80
paths = ["src/firewallfabrik"]
# GUI dialogs are excluded: PySide6 .ui-driven widgets have many attributes
# accessed dynamically by Qt, which vulture cannot see.
exclude = ["src/firewallfabrik/gui"]
# API-required parameters of framework override methods (SQLAlchemy
# TypeDecorator / event listeners, yaml.SafeDumper override, base-class
# compiler driver signatures). They are named positionally by the framework,
# so we cannot rename them away, and they are part of the contract.
ignore_names = [
    "attached_networks",
    "cluster_id",
    "connection_record",
    "dialect",
    "indentless",
]
